--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </script>
 <!-- End Google Tag Manager for WordPress by gtm4wp.com -->
 	<!-- This site is optimized with the Yoast SEO plugin v16.6.1 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>ALI Arab (Georgetown)</title>
+	<title>Ali Arab [Georgetown U.]</title>
 	<meta name="description" content="Our need blind admissions policy and support for first generation college students reflect our commitment to making Georgetown accessible and affordable." />
 	<link rel="canonical" href="https://www.georgetown.edu/admissions/" />
 	<meta property="og:locale" content="en_US" />
